# these are the headers for your project

noinst_HEADERS = \
	apply.h \
	commands.h \
	directorylisting.h \
	engine_context.h \
	event.h \
	event_handler.h \
	event_loop.h \
	externalipresolver.h \
	FileZillaEngine.h \
	file.h \
	libfilezilla.h \
	local_filesys.h \
	local_path.h \
	logging.h \
	misc.h \
	msgbox.h \
	mutex.h \
	notification.h \
	optional.h \
	optionsbase.h \
	option_change_event_handler.h \
	refcount.h \
	server.h \
	serverpath.h \
	setup.h \
	sizeformatting_base.h \
	socket.h \
	timeex.h

